--- a/main.html
+++ b/main.html
@@ -9,6 +9,17 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="main-container">
+		<h1>Testimonials</h1>
+		<div class="testimonial">
+			<p>This product is amazing! I highly recommand it to anyone in need of a solution to this</p>
+			<p class="author">-Jolve dose</p>
+			
+		</div>
+		<div class="testimonial">
+			<p>I have been using this for a few weeks now and it has completely transformed my workflow</p>
+			<p class="author">-Jolve dose</p>
+			
+		</div>
 		
 	</div>
     <script type="text/javascript" src="./script.js">
