--- a/main.html
+++ b/main.html
@@ -12,12 +12,12 @@
 		<h1>Testimonials</h1>
 		<div class="testimonial">
 			<p>This product is amazing! I highly recommand it to anyone in need of a solution to this</p>
-			<p class="author">-Jolve dose</p>
+			<p class="author">-John Doe</p>
 			
 		</div>
 		<div class="testimonial">
 			<p>I have been using this for a few weeks now and it has completely transformed my workflow</p>
-			<p class="author">-Jolve dose</p>
+			<p class="author">-Jane Smith</p>
 			
 		</div>
 		
